[package]
name = "ncm-unboxing"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = {version = "1.40.0", features = ["full"]}
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.128"
thiserror = "2.0.3"
anyhow = "1.0.89"
clap = { version = "4.5.21", features = ["derive"] }
aes = "0.7.5"
block-modes = {version = "0.8.1"}
base64 = "0.22.1"
audiotags = "0.5.0"